WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53693
Start using MarkedBlock instead of CollectorBlock
https://bugs.webkit.org/show_bug.cgi?id=53693
Summary
Start using MarkedBlock instead of CollectorBlock
Geoffrey Garen
Reported
2011-02-03 10:44:06 PST
Start using MarkedBlock instead of CollectorBlock
Attachments
Patch
(10.51 KB, patch)
2011-02-03 10:47 PST
,
Geoffrey Garen
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-02-03 10:47:58 PST
Created
attachment 81083
[details]
Patch
Geoffrey Garen
Comment 2
2011-02-03 11:23:47 PST
Committed
r77519
: <
http://trac.webkit.org/changeset/77519
>
WebKit Review Bot
Comment 3
2011-02-03 11:33:20 PST
http://trac.webkit.org/changeset/77519
might have broken SnowLeopard Intel Release (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug