Source/JavaScriptCore/runtime/MarkedSpace.h
@@ -23,6 +23,7 @@
 #define MarkedSpace_h
 
 #include "MachineStackMarker.h"
+#include "MarkedBlock.h"
 #include "PageAllocationAligned.h"
 #include <wtf/Bitmap.h>
 #include <wtf/FixedArray.h>
@@ -32,19 +33,12 @@
 
 namespace JSC {
 
-    class CollectorBlock;
     class Heap;
     class JSCell;
     class JSGlobalData;
     class LiveObjectIterator;
     class MarkStack;
     class WeakGCHandle;
-
-#if OS(WINCE) || OS(SYMBIAN) || PLATFORM(BREWMP)
-    const size_t BLOCK_SIZE = 64 * 1024; // 64k
-#else
-    const size_t BLOCK_SIZE = 256 * 1024; // 256k
-#endif
 
     struct CollectorHeap {
         size_t nextBlock;
@@ -54,9 +48,9 @@ namespace JSC {
         size_t numBlocks;
         size_t usedBlocks;
 
-        CollectorBlock* collectorBlock(size_t index) const
+        MarkedBlock* collectorBlock(size_t index) const
         {
-            return static_cast<CollectorBlock*>(blocks[index].base());
+            return static_cast<MarkedBlock*>(blocks[index].base());
         }
     };
 
@@ -67,7 +61,7 @@ namespace JSC {
 
         static bool isMarked(const JSCell*);
         static bool testAndSetMarked(const JSCell*);
-        static void setMarked(JSCell*);
+        static void setMarked(const JSCell*);
 
         MarkedSpace(JSGlobalData*);
         void destroy();
@@ -85,108 +79,50 @@ namespace JSC {
         size_t capacity() const;
         size_t objectCount() const;
 
-        bool contains(void*);
+        bool contains(const void*);
 
         LiveObjectIterator primaryHeapBegin();
         LiveObjectIterator primaryHeapEnd();
 
     private:
-        bool isCellAligned(void*);
-        bool isPossibleCell(void*);
-        bool containsSlowCase(void*);
+        bool containsSlowCase(const void*);
 
-        static CollectorBlock* cellBlock(const JSCell*);
-        static size_t cellOffset(const JSCell*);
-
-        NEVER_INLINE CollectorBlock* allocateBlock();
+        NEVER_INLINE MarkedBlock* allocateBlock();
         NEVER_INLINE void freeBlock(size_t);
         void resizeBlocks();
         void growBlocks(size_t neededBlocks);
         void shrinkBlocks(size_t neededBlocks);
 
-        void clearMarkBits(CollectorBlock*);
+        void clearMarkBits(MarkedBlock*);
         size_t markedCells(size_t startBlock = 0, size_t startCell = 0) const;
 
         CollectorHeap m_heap;
         JSGlobalData* m_globalData;
     };
 
-    // tunable parameters
-    // derived constants
-    const size_t BLOCK_OFFSET_MASK = BLOCK_SIZE - 1;
-    const size_t BLOCK_MASK = ~BLOCK_OFFSET_MASK;
-    const size_t MINIMUM_CELL_SIZE = 64;
-    const size_t CELL_ARRAY_LENGTH = (MINIMUM_CELL_SIZE / sizeof(double)) + (MINIMUM_CELL_SIZE % sizeof(double) != 0 ? sizeof(double) : 0);
-    const size_t CELL_SIZE = CELL_ARRAY_LENGTH * sizeof(double);
-    const size_t SMALL_CELL_SIZE = CELL_SIZE / 2;
-    const size_t CELL_MASK = CELL_SIZE - 1;
-    const size_t CELL_ALIGN_MASK = ~CELL_MASK;
-    const size_t CELLS_PER_BLOCK = (BLOCK_SIZE - sizeof(MarkedSpace*)) * 8 * CELL_SIZE / (8 * CELL_SIZE + 1) / CELL_SIZE; // one bitmap byte can represent 8 cells.
-    
-    struct CollectorCell {
-        FixedArray<double, CELL_ARRAY_LENGTH> memory;
-    };
-
-    class CollectorBlock {
-    public:
-        FixedArray<CollectorCell, CELLS_PER_BLOCK> cells;
-        WTF::Bitmap<CELLS_PER_BLOCK> marked;
-        Heap* heap;
-    };
-
-    struct HeapConstants {
-        static const size_t cellSize = CELL_SIZE;
-        static const size_t cellsPerBlock = CELLS_PER_BLOCK;
-        typedef CollectorCell Cell;
-        typedef CollectorBlock Block;
-    };
-
-    inline CollectorBlock* MarkedSpace::cellBlock(const JSCell* cell)
-    {
-        return reinterpret_cast<CollectorBlock*>(reinterpret_cast<uintptr_t>(cell) & BLOCK_MASK);
-    }
-
-    inline size_t MarkedSpace::cellOffset(const JSCell* cell)
-    {
-        return (reinterpret_cast<uintptr_t>(cell) & BLOCK_OFFSET_MASK) / CELL_SIZE;
-    }
-
     inline Heap* MarkedSpace::heap(JSCell* cell)
     {
-        return cellBlock(cell)->heap;
+        return MarkedBlock::blockFor(cell)->heap;
     }
 
     inline bool MarkedSpace::isMarked(const JSCell* cell)
     {
-        return cellBlock(cell)->marked.get(cellOffset(cell));
+        return MarkedBlock::blockFor(cell)->isMarked(cell);
     }
 
     inline bool MarkedSpace::testAndSetMarked(const JSCell* cell)
     {
-        return cellBlock(cell)->marked.testAndSet(cellOffset(cell));
+        return MarkedBlock::blockFor(cell)->testAndSetMarked(cell);
     }
 
-    inline void MarkedSpace::setMarked(JSCell* cell)
+    inline void MarkedSpace::setMarked(const JSCell* cell)
     {
-        cellBlock(cell)->marked.set(cellOffset(cell));
+        MarkedBlock::blockFor(cell)->setMarked(cell);
     }
 
-    // Cell size needs to be a power of two for isPossibleCell to be valid.
-    COMPILE_ASSERT(!(sizeof(CollectorCell) % 2), Collector_cell_size_is_power_of_two);
-
-    inline bool MarkedSpace::isCellAligned(void *p)
+    inline bool MarkedSpace::contains(const void* x)
     {
-        return !((intptr_t)(p) & CELL_MASK);
-    }
-
-    inline bool MarkedSpace::isPossibleCell(void* p)
-    {
-        return isCellAligned(p) && p;
-    }
-
-    inline bool MarkedSpace::contains(void* x)
-    {
-        if (!isPossibleCell(x))
+        if (!MarkedBlock::isPossibleCell(x))
             return false;
             
         return containsSlowCase(x);
